[gd_scene load_steps=5 format=2]

[ext_resource path="res://data/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://script/sougen/sougen_area.gd" type="Script" id=2]
[ext_resource path="res://data/image/bg/wood_sun.png" type="Texture" id=3]
[ext_resource path="res://script/player.gd" type="Script" id=6]

[node name="sougen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="player" type="Node" parent="."]
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
texture = ExtResource( 3 )
expand = true

[node name="sakihesusumu" type="Button" parent="."]
margin_top = 1050.0
margin_right = 600.0
margin_bottom = 1130.0
custom_fonts/font = ExtResource( 1 )
text = "先へ進む"

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = 280.0
margin_right = 300.0
margin_bottom = 427.0

[node name="message" type="Label" parent="Panel"]
anchor_left = 0.0116667
anchor_top = 0.0510204
anchor_right = 0.923333
anchor_bottom = 0.860544
margin_left = 11.0
margin_top = -0.499999
margin_right = 26.0002
margin_bottom = 13.5
custom_fonts/font = ExtResource( 1 )
text = "- 調査を始めよう -"

[node name="home" type="Button" parent="."]
margin_left = 15.0
margin_top = 1140.0
margin_right = 195.0
margin_bottom = 1220.0
custom_fonts/font = ExtResource( 1 )
text = "拠点地へ戻る"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="home"]
anchor_left = 1.483
anchor_top = -4.087
anchor_right = 1.483
anchor_bottom = -4.087
margin_left = -227.94
margin_top = -217.04
margin_right = 266.06
margin_bottom = -0.039978
rect_min_size = Vector2( 150, 52.5 )
window_title = "確認"

[node name="kakunin" type="Button" parent="."]
margin_left = 210.0
margin_top = 1140.0
margin_right = 390.0
margin_bottom = 1220.0
custom_fonts/font = ExtResource( 1 )
text = "確認"

[node name="sonota" type="Button" parent="."]
margin_left = 405.0
margin_top = 1140.0
margin_right = 585.0
margin_bottom = 1220.0
custom_fonts/font = ExtResource( 1 )
text = "その他"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 68.0
margin_right = 594.0
margin_bottom = 177.0
color = Color( 0.529412, 0.486275, 0.486275, 0.466667 )

[node name="pnamae" type="Label" parent="ColorRect"]
margin_left = 7.0
margin_top = 5.0
margin_right = 107.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 1 )

[node name="mon_zyoutai" type="Label" parent="ColorRect"]
margin_left = 7.0
margin_top = 55.0
margin_right = 107.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 1 )
text = "怪物界："

[node name="mon_zyoutai2" type="Label" parent="ColorRect"]
margin_left = 110.0
margin_top = 55.0
margin_right = 240.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 1 )

[node name="hu_zyoutai" type="Label" parent="ColorRect"]
margin_left = 250.0
margin_top = 55.0
margin_right = 350.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 1 )
text = "人間界："

[node name="hu_zyoutai2" type="Label" parent="ColorRect"]
margin_left = 360.0
margin_top = 55.0
margin_right = 510.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 1 )

[node name="tairyoku" type="Label" parent="ColorRect"]
margin_left = 120.0
margin_top = 5.0
margin_right = 171.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 1 )
text = "体力："

[node name="tairyoku_suuzi" type="Label" parent="ColorRect"]
margin_left = 190.0
margin_top = 5.0
margin_right = 240.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 1 )

[node name="kinryoku" type="Label" parent="ColorRect"]
margin_left = 250.0
margin_top = 5.0
margin_right = 325.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 1 )
text = "筋力："

[node name="kinryoku_suuzi" type="Label" parent="ColorRect"]
margin_left = 330.0
margin_top = 5.0
margin_right = 380.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 1 )

[node name="taisei" type="Label" parent="ColorRect"]
margin_left = 410.0
margin_top = 5.0
margin_right = 485.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 1 )
text = "耐性："

[node name="taisei_suuzi" type="Label" parent="ColorRect"]
margin_left = 500.0
margin_top = 5.0
margin_right = 550.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 1 )

[connection signal="pressed" from="sakihesusumu" to="." method="_on_sakihesusumu_pressed"]
